# wasmedge-playground

functions/rs-hello-world/: Cargo.toml  test.ps1
functions/rs-hello-world/src/: main.rs
functions/rs-http-req-function/: Cargo.toml  test.ps1
functions/rs-http-req-function/src/: main.rs
functions/rs-reqwest-function/: Cargo.toml
functions/rs-reqwest-function/src/: main.rs
functions/rs-simple-function/: build.ps1  test.ps1
functions/rs-simple-function-aot/: Cargo.toml  build.ps1  test.ps1
functions/rs-simple-function/src/: lib.rs
functions/rs-test-perms-function/: Cargo.toml  README.md  test.ps1
functions/rs-test-perms-function/src/: main.rs
